Fixed some inconsistent uses of x for the emissions

--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -1753,7 +1753,7 @@
     "q(\\mu_i, \\sigma_i^2)\n",
     "&= \\sum_{t=1}^T P(X_t=i|Y=y, \\Theta_n) \\log P(Y_t=y_t|X_t=i, \\Theta) \\\\\n",
     "&= \\sum_{t=1}^T w_{it} \\log \\left(\n",
-    "                                  \\frac{1}{\\sqrt{2\\pi\\sigma^2}} e^{-\\frac{\\left( x-\\mu \\right)^2}{2\\sigma^2}}\n",
+    "                                  \\frac{1}{\\sqrt{2\\pi\\sigma^2}} e^{-\\frac{\\left( y-\\mu \\right)^2}{2\\sigma^2}}\n",
     "                             \\right) \\\\\n",
     "&= \\sum_{t=1}^T w_{it} \\left(\n",
     "                             -\\frac{1}{2}\\log \\sigma^2\n",
@@ -1938,11 +1938,11 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\frac{\\partial f_i(x)}{\\partial \\mu_i}\n",
+    "\\frac{\\partial f_i(y)}{\\partial \\mu_i}\n",
     "&= \\frac{1}{\\sqrt{2\\pi\\sigma_i^2}}\n",
-    "   e^{-\\frac{\\left( x-\\mu_i \\right)^2}{2\\sigma_i^2}}\n",
-    "   \\frac{x - \\mu_i}{\\sigma_i^2} \\\\\n",
-    "&= f_i(x) \\frac{x - \\mu_i}{\\sigma_i^2}, \\\\\n",
+    "   e^{-\\frac{\\left( y-\\mu_i \\right)^2}{2\\sigma_i^2}}\n",
+    "   \\frac{y - \\mu_i}{\\sigma_i^2} \\\\\n",
+    "&= f_i(y) \\frac{y - \\mu_i}{\\sigma_i^2}, \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -1950,18 +1950,18 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\frac{\\partial f_i(x)}{\\partial \\sigma_i^2}\n",
+    "\\frac{\\partial f_i(y)}{\\partial \\sigma_i^2}\n",
     "&= \\frac{1}{\\sqrt{2\\pi}} \\cdot -\\frac{1}{2}\n",
     "   \\left( \\sigma_i^2 \\right)^{-\\frac{3}{2}}\n",
-    "   e^{-\\frac{\\left( x-\\mu_i \\right)^2}{2\\sigma_i^2}}\n",
+    "   e^{-\\frac{\\left( y-\\mu_i \\right)^2}{2\\sigma_i^2}}\n",
     "   +\n",
     "   \\frac{1}{\\sqrt{2\\pi}}\n",
     "   \\left( \\sigma_i^2 \\right)^{-\\frac{1}{2}}\n",
-    "   e^{-\\frac{\\left( x-\\mu_i \\right)^2}{2\\sigma_i^2}}\n",
-    "   \\cdot -\\frac{\\left( x-\\mu_i \\right)^2}{2}\n",
+    "   e^{-\\frac{\\left( y-\\mu_i \\right)^2}{2\\sigma_i^2}}\n",
+    "   \\cdot -\\frac{\\left( y-\\mu_i \\right)^2}{2}\n",
     "   \\cdot -\\left( \\sigma_i^2 \\right)^{-2} \\\\\n",
-    "&= \\frac{f_i(x)}{2} \\left[ \\left( -\\sigma_i^2 \\right)^{-1}\n",
-    "                           + \\left( x - \\mu_i \\right)^2 \\left( \\sigma_i^2 \\right)^{-2}\n",
+    "&= \\frac{f_i(y)}{2} \\left[ \\left( -\\sigma_i^2 \\right)^{-1}\n",
+    "                           + \\left( y - \\mu_i \\right)^2 \\left( \\sigma_i^2 \\right)^{-2}\n",
     "                    \\right]. \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
@@ -1975,7 +1975,7 @@
     "and perform gradient descent on the auxiliary variable $z_i$. The new derivative is then easily calculated as\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial f_i(x)}{\\partial z_i} = \\frac{\\partial f_i(x)}{\\partial \\sigma_i^2}\n",
+    "\\frac{\\partial f_i(y)}{\\partial z_i} = \\frac{\\partial f_i(y)}{\\partial \\sigma_i^2}\n",
     "                                        \\frac{\\partial \\sigma_i^2}{\\partial z_i}\n",
     "$$\n",
     "\n",
@@ -1987,7 +1987,7 @@
     "\\frac{\\partial L}{\\partial \\mu_i}\n",
     "= -\\left[\n",
     "         \\sum_t \\left( m_i(t) - n_i(t) \\right)\n",
-    "                \\left( \\frac{x_t - \\mu_i}{\\sigma_i^2} \\right)\n",
+    "                \\left( \\frac{y_t - \\mu_i}{\\sigma_i^2} \\right)\n",
     "   \\right].\n",
     "$$\n",
     "\n",
@@ -2001,7 +2001,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "262b33f8",
+   "id": "21c07922",
    "metadata": {},
    "outputs": [
     {
@@ -2036,7 +2036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e0ec7ad",
+   "id": "4134a165",
    "metadata": {},
    "source": [
     "Though the densities are clearly distinct, they do have a non-trivial overlap. The gamma distribution is also noticeably skewed to the right.\n",
@@ -2047,7 +2047,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6d190810",
+   "id": "5c8d2ab7",
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90252d92",
+   "id": "4109dd38",
    "metadata": {},
    "source": [
     "It's apparent there are alternating high and low intervals. However, as a result of the overlap between the emission distributions, the boundaries are not always clearcut.\n",
@@ -2097,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0e1db4b0",
+   "id": "3fac79e2",
    "metadata": {},
    "outputs": [
     {
@@ -2160,7 +2160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac06a5f",
+   "id": "0e7cde8a",
    "metadata": {},
    "source": [
     "Let's now tackle conditional maximum likelihood training, and after we'll compare the two. Because the implementation is somewhat lengthy, I've written it as the function `fit_CML` in the accompanying `utils` module. We only have to supply all the pieces. Each set of parameters we're estimating requires an initial estimate. As with the EM algorithm, it's best practice to inject some randomness into these initial values and choose the best result after several runs. For simplicity, though, we'll use the ML estimates directly. Because `t_dists` and `start_dist` will always take the form of a nested dictionary and dictionary, respectively, `fit_CML` accepts these objects as is. The emission distributions are more complex, however, because we need to supply the 1) parameter names and their initial estimates, 2) the emission probability or density functions, 3) the derivatives relative to each parameter, 4) functions which transform any constrained parameters to their auxiliary variables and 5) corresponding functions which reverse the transformation. Accordingly, each of these is supplied as a separate argument in the form of simple or nested dictionaries.\n",
@@ -2171,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f454d8df",
+   "id": "92b6eb13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adb0e15a",
+   "id": "8b68a2e0",
    "metadata": {},
    "source": [
     "After defining our new density function, we simply map the states to it in a dictionary."
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fd1a2b6e",
+   "id": "3aa89eb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,7 +2200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca37e4d",
+   "id": "62533cde",
    "metadata": {},
    "source": [
     "The derivatives require more explanation. As we saw before, the derivative of the conditional log-likelihood function involves a sum over a function that includes $n_i$ and  $m_i$. However, the terms involving those variables are the same for any emission distribution whose parameters are not shared between states, so it would be redundant to include them every time. Instead, the derivative relative to parameter $\\theta$ must take the form\n",
@@ -2219,7 +2219,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "eee99347",
+   "id": "b20fb6f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36eebfdb",
+   "id": "fdb87f06",
    "metadata": {},
    "source": [
     "These functions are then mapped to their corresponding state and parameter combination using a nested dictionary."
@@ -2244,7 +2244,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "203bc72d",
+   "id": "1202b9f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2254,7 +2254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb697193",
+   "id": "ba33e480",
    "metadata": {},
    "source": [
     "The two sets of variable transformation functions are defined and structured similarly. The auxiliary variables are named with the convention the corresponding auxiliary variable for parameter `param` is called `param_aux`."
@@ -2263,7 +2263,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3a269909",
+   "id": "7c7276f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2291,7 +2291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5938e3ab",
+   "id": "248f71a6",
    "metadata": {},
    "source": [
     "We're finally ready to fit our model to the data! All we have to do now is pass our arguments into `fit_CML`. There are a few more optional parameters, but their meanings should be clear from the previous discussion."
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5775fbf7",
+   "id": "cc0d169e",
    "metadata": {},
    "outputs": [
     {
@@ -3241,14 +3241,6 @@
     "                 e_param2aux=e_param2aux, e_aux2param=e_aux2param,\n",
     "                 start_dist=start_dist_ML)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20c5eebf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
