Removed unnecessary review of normal pdf

--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -1734,13 +1734,7 @@
     "\n",
     "Though moving the sum over all state sequences outside the logarithm seemed like a minor mathematical detail, it, in combination with the probabilistic structure of an HMM, makes its computation tractable. Another consequence is that if the transitions and emissions are all governed by different parameters, we can maximize the entire expression by optimizing the corresponding sum for each state or pair of states individually. You can even see that the fractional \"counts\" $P(X_t=i|Y=y, \\Theta)$ and $P(X_t=i, X_{t+1}=j|Y=y)$ that we defined in the previous section are the coefficients of the log-likelihood terms, which is directly related to their appearance in the update equations.\n",
     "\n",
-    "Now that we've demonstrated that each term can be optimized separately, we'll show the derivation of the update equations for a normal emission distribution. Recall that the density function of a normal distribution with mean $\\mu$ and variance $\\sigma^2$ is given by\n",
-    "\n",
-    "$$\n",
-    "f(x, \\mu, \\sigma^2) = \\frac{1}{\\sqrt{2\\pi\\sigma^2}} e^{-\\frac{\\left( x-\\mu \\right)^2}{2\\sigma^2}}.\n",
-    "$$\n",
-    "\n",
-    "Thus, for a fixed state $i$ we want to maximize the following quantity which we'll call $q(\\Theta)$:\n",
+    "Now that we've demonstrated that each term can be optimized separately, we'll show the derivation of the update equations for a normal emission distribution. We begin by writing the term we wish to optimize for a fixed state $i$, which we'll call $q(\\Theta)$:\n",
     "\n",
     "$$\n",
     "q(\\Theta) = \\sum_{t=1}^T P(X_t=i|Y=y, \\Theta_n) \\log P(Y_t=y_t|X_t=i, \\Theta).\n",
@@ -2001,7 +1995,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "21c07922",
+   "id": "6f2163c8",
    "metadata": {},
    "outputs": [
     {
@@ -2036,7 +2030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4134a165",
+   "id": "f7b46bb1",
    "metadata": {},
    "source": [
     "Though the densities are clearly distinct, they do have a non-trivial overlap. The gamma distribution is also noticeably skewed to the right.\n",
@@ -2047,7 +2041,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5c8d2ab7",
+   "id": "0ac492bb",
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4109dd38",
+   "id": "366b243b",
    "metadata": {},
    "source": [
     "It's apparent there are alternating high and low intervals. However, as a result of the overlap between the emission distributions, the boundaries are not always clearcut.\n",
@@ -2097,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3fac79e2",
+   "id": "e8eb9c66",
    "metadata": {},
    "outputs": [
     {
@@ -2160,7 +2154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e7cde8a",
+   "id": "35caca16",
    "metadata": {},
    "source": [
     "Let's now tackle conditional maximum likelihood training, and after we'll compare the two. Because the implementation is somewhat lengthy, I've written it as the function `fit_CML` in the accompanying `utils` module. We only have to supply all the pieces. Each set of parameters we're estimating requires an initial estimate. As with the EM algorithm, it's best practice to inject some randomness into these initial values and choose the best result after several runs. For simplicity, though, we'll use the ML estimates directly. Because `t_dists` and `start_dist` will always take the form of a nested dictionary and dictionary, respectively, `fit_CML` accepts these objects as is. The emission distributions are more complex, however, because we need to supply the 1) parameter names and their initial estimates, 2) the emission probability or density functions, 3) the derivatives relative to each parameter, 4) functions which transform any constrained parameters to their auxiliary variables and 5) corresponding functions which reverse the transformation. Accordingly, each of these is supplied as a separate argument in the form of simple or nested dictionaries.\n",
@@ -2171,7 +2165,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "92b6eb13",
+   "id": "f639720f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b68a2e0",
+   "id": "18b0411b",
    "metadata": {},
    "source": [
     "After defining our new density function, we simply map the states to it in a dictionary."
@@ -2190,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3aa89eb3",
+   "id": "ffe1cd1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,7 +2194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62533cde",
+   "id": "aadcc298",
    "metadata": {},
    "source": [
     "The derivatives require more explanation. As we saw before, the derivative of the conditional log-likelihood function involves a sum over a function that includes $n_i$ and  $m_i$. However, the terms involving those variables are the same for any emission distribution whose parameters are not shared between states, so it would be redundant to include them every time. Instead, the derivative relative to parameter $\\theta$ must take the form\n",
@@ -2219,7 +2213,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b20fb6f7",
+   "id": "8f8527e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,7 +2229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdb87f06",
+   "id": "dfa3124b",
    "metadata": {},
    "source": [
     "These functions are then mapped to their corresponding state and parameter combination using a nested dictionary."
@@ -2244,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1202b9f2",
+   "id": "a1c5b798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2254,7 +2248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba33e480",
+   "id": "afc885c2",
    "metadata": {},
    "source": [
     "The two sets of variable transformation functions are defined and structured similarly. The auxiliary variables are named with the convention the corresponding auxiliary variable for parameter `param` is called `param_aux`."
@@ -2263,7 +2257,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7c7276f8",
+   "id": "e09d15e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2291,7 +2285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "248f71a6",
+   "id": "0f5df7e7",
    "metadata": {},
    "source": [
     "We're finally ready to fit our model to the data! All we have to do now is pass our arguments into `fit_CML`. There are a few more optional parameters, but their meanings should be clear from the previous discussion."
@@ -2300,7 +2294,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cc0d169e",
+   "id": "5cac3895",
    "metadata": {},
    "outputs": [
     {
