--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -3339,7 +3339,7 @@
     "\n",
     "## 5 Conclusion\n",
     "\n",
-    "We have at last reached the end of the training tutorial!"
+    "We have at last reached the end of the training tutorial! It's been quite a tour through several fundamental concepts in statistics and machine learning. While many of these ideas seem complex, as we've seen throughout this tutorial, they can often be implemented in only a few dozen lines of code. The previous examples have covered some of the most widely used distributions in statistics, but we've only scratched the surface of what is possible with probabilistic modeling. Fortunately, once the theoretical heavy lifting is out of the way, supporting a new distribution is often a relatively straightforward task of writing and solving a set of equations. Hopefully, then, these examples will inspire you to derive and implement your own MLEs and EM or gradient update equations if the need arises. Good luck!"
    ]
   }
  ],
