Extracted legend settings into dictionary

--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "#### 2.3.1 Categorical emission distribution\n",
     "\n",
-    "To get started, we'll first import the packages used throughout this tutorial."
+    "To get started, we'll first import the packages and some plotting settings used throughout this tutorial."
    ]
   },
   {
@@ -241,7 +241,9 @@
     "import scipy.stats as stats\n",
     "import sklearn.metrics as metrics\n",
     "from numpy import exp, log\n",
-    "from utils import fit_CML"
+    "from utils import fit_CML\n",
+    "\n",
+    "legend_kwargs = {'frameon': False, 'loc': 'center left', 'bbox_to_anchor': (1, 0.5)}"
    ]
   },
   {
@@ -558,9 +560,9 @@
     "axs[1].set_ylabel('Label')\n",
     "axs[2].set_ylabel('Probability')\n",
     "axs[3].set_ylabel('Probability')\n",
-    "axs[1].legend(title='true states', frameon=False, loc='center left', bbox_to_anchor=(1, 0.5))\n",
-    "axs[2].legend(title='model', frameon=False, loc='center left', bbox_to_anchor=(1, 0.5))\n",
-    "axs[3].legend(title='model_hat', frameon=False, loc='center left', bbox_to_anchor=(1, 0.5));"
+    "axs[1].legend(title='true states', **legend_kwargs)\n",
+    "axs[2].legend(title='model', **legend_kwargs)\n",
+    "axs[3].legend(title='model_hat', **legend_kwargs);"
    ]
   },
   {
@@ -842,9 +844,9 @@
     "axs[1].set_ylabel('Label')\n",
     "axs[2].set_ylabel('Probability')\n",
     "axs[3].set_ylabel('Probability')\n",
-    "axs[1].legend(title='true states', frameon=False, loc='center left', bbox_to_anchor=(1, 0.5))\n",
-    "axs[2].legend(title='model', frameon=False, loc='center left', bbox_to_anchor=(1, 0.5))\n",
-    "axs[3].legend(title='model_hat', frameon=False, loc='center left', bbox_to_anchor=(1, 0.5));"
+    "axs[1].legend(title='true states', **legend_kwargs)\n",
+    "axs[2].legend(title='model', **legend_kwargs)\n",
+    "axs[3].legend(title='model_hat', **legend_kwargs);"
    ]
   },
   {
@@ -1960,7 +1962,7 @@
     "plt.plot(xs, ys1, label='1')\n",
     "plt.plot(xs, ys2, label='2')\n",
     "plt.ylabel('Density')\n",
-    "plt.legend(frameon=False, loc='center left', bbox_to_anchor=(1, 0.5));"
+    "plt.legend(**legend_kwargs);"
    ]
   },
   {
@@ -2010,7 +2012,7 @@
     "axs[1].set_xlabel('Time step')\n",
     "axs[0].set_ylabel('Emission')\n",
     "axs[1].set_ylabel('Label')\n",
-    "axs[1].legend(frameon=False, loc='center left', bbox_to_anchor=(1, 0.5));"
+    "axs[1].legend(**legend_kwargs);"
    ]
   },
   {
@@ -3215,13 +3217,13 @@
     "ys2 = stats.norm.pdf(xs, loc=e_params_ML[2]['mu'], scale=e_params_ML[2]['sigma2']**0.5)\n",
     "axs[0].plot(xs, ys1, label='ML state 1')\n",
     "axs[0].plot(xs, ys2, label='ML state 2')\n",
-    "axs[0].legend(frameon=False, loc='center left', bbox_to_anchor=(1, 0.5))\n",
+    "axs[0].legend(**legend_kwargs)\n",
     "\n",
     "ys1 = stats.norm.pdf(xs, loc=e_params_CML[1]['mu'], scale=e_params_CML[1]['sigma2']**0.5)\n",
     "ys2 = stats.norm.pdf(xs, loc=e_params_CML[2]['mu'], scale=e_params_CML[2]['sigma2']**0.5)\n",
     "axs[1].plot(xs, ys1, label='CML state 1')\n",
     "axs[1].plot(xs, ys2, label='CML state 2')\n",
-    "axs[1].legend(frameon=False, loc='center left', bbox_to_anchor=(1, 0.5));"
+    "axs[1].legend(**legend_kwargs);"
    ]
   },
   {
@@ -3318,7 +3320,7 @@
     "ax.plot(fpr_CML, tpr_CML, label='CML')\n",
     "ax.set_xlabel('False positive rate')\n",
     "ax.set_ylabel('True positive rate')\n",
-    "ax.legend(frameon=False, loc='center left', bbox_to_anchor=(1, 0.5))\n",
+    "ax.legend(**legend_kwargs)\n",
     "\n",
     "idx_ML = fpr_ML <= 0.1\n",
     "idx_CML = fpr_CML <= 0.1\n",
