--- a/tutorials/hmm_intro.ipynb
+++ b/tutorials/hmm_intro.ipynb
@@ -80,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "HMM(states={'2-tailed', 'fair'},\n",
+       "HMM(states={'fair', '2-tailed'},\n",
        "    stop_states=[],\n",
        "    name='dishonest_coin')"
       ]
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "afa27ac9",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        " ('2-tailed', 'tails')]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "274eb64f",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "74d3c40a",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "52595cb0",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "ca3bca8d",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "200a7ca5",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "857495c3",
    "metadata": {},
    "outputs": [
@@ -492,19 +492,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "8f2d5c7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "HMM(states={'drought', 'not drought'},\n",
+       "HMM(states={'not drought', 'drought'},\n",
        "    stop_states=[],\n",
        "    name='weather')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "373be608",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "7603b700",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "f7c69ffb",
    "metadata": {},
    "outputs": [
