Removed scare quotes around real technical phrases

--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -62,7 +62,7 @@
     "L(D, f, \\Theta) = L(\\Theta).\n",
     "$$\n",
     "\n",
-    "The optimized or \"learned\" parameters are then written as\n",
+    "The optimized or learned parameters are then written as\n",
     "\n",
     "$$\n",
     "\\DeclareMathOperator*{\\argmax}{arg\\!\\max}\n",
@@ -158,7 +158,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "This is now a fairly clean expression since at each step we \"pick\" the right transition probability and emission distribution using the state sequence. However, it will be useful both theoretically and computationally to write this expression in terms of the number of times each transition appears in the sequence. To do this, we first need the Kronecker delta function, which is defined as\n",
+    "This is now a fairly clean expression since at each step we pick the right transition probability and emission distribution using the state sequence. However, it will be useful both theoretically and computationally to write this expression in terms of the number of times each transition appears in the sequence. To do this, we first need the Kronecker delta function, which is defined as\n",
     "\n",
     "$$\n",
     "\\delta_{ij} = \n",
@@ -321,9 +321,9 @@
    "id": "08d3c905",
    "metadata": {},
    "source": [
-    "We're now ready to implement the MLEs for the transition probabilities. Before, though, we should discuss selection of the model structure, that is, the number of states and the allowed transitions between those states. Since in this case the data are simulated, we know the structure exactly. However, modeling real-world data is often far more complicated since it's rare to have perfect knowledge of the data generating process even if the states are labeled. Thus, it's tempting to use a \"fully connected\" model that allows transitions between each pair of states and let the model learn what transitions are actually used from the data. That said, constraining the allowed transitions can lead to better models, particularly if the constraints reflect a feature of the underlying process.\n",
+    "We're now ready to implement the MLEs for the transition probabilities. Before, though, we should discuss selection of the model structure, that is, the number of states and the allowed transitions between those states. Since in this case the data are simulated, we know the structure exactly. However, modeling real-world data is often far more complicated since it's rare to have perfect knowledge of the data generating process even if the states are labeled. Thus, it's tempting to use a fully connected model that allows transitions between each pair of states and let the model learn what transitions are actually used from the data. That said, constraining the allowed transitions can lead to better models, particularly if the constraints reflect a feature of the underlying process.\n",
     "\n",
-    "For this example, we'll assume that we have some \"domain knowledge\" that permits us to know the states and their allowed transitions. For example, state 2 can transition to every state, but states 1 and 3 can only transition to themselves and state 2. It's also customary to add a small pseudocount to the allowed transitions to ensure they're permitted by our model in the rare chance that we don't observe them in the data. There are a variety of ways to implement this, but in the approach shown below we first instantiate a transition count dictionary with the pseudocounts. We then iterate over the data to add the observed transitions and afterwards normalize the counts by the total number for each initial state to obtain the estimated transition probabilities.\n",
+    "For this example, we'll assume that we have some domain knowledge that permits us to know the states and their allowed transitions. For example, state 2 can transition to every state, but states 1 and 3 can only transition to themselves and state 2. It's also customary to add a small pseudocount to the allowed transitions to ensure they're permitted by our model in the rare chance that we don't observe them in the data. There are a variety of ways to implement this, but in the approach shown below we first instantiate a transition count dictionary with the pseudocounts. We then iterate over the data to add the observed transitions and afterwards normalize the counts by the total number for each initial state to obtain the estimated transition probabilities.\n",
     "\n",
     "The strength of this approach is it yields a nested dictionary which we can use as an input to the `HMM` class. We'll actually use the original `t_dists` to establish the model structure, but if it weren't available, we could create a similar nested object which encodes the same information. (Unfortunately, it's hard to avoid specifying at least some portions of the model manually unless it's fully-connected or its structure is highly modular.)"
    ]
@@ -900,7 +900,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Now let's find the MLE for $\\sigma^2$. Another nuance for the normal distribution in particular is the derivative is taken relative to the variance, $\\sigma^2$, and not the standard deviation, $\\sigma$. Though this choice does not impact the resulting formula, it both simplifies the calculation and reflects the natural role of the variance as the more \"fundamental\" statistical quantity.\n",
+    "Now let's find the MLE for $\\sigma^2$. Another nuance for the normal distribution in particular is the derivative is taken relative to the variance, $\\sigma^2$, and not the standard deviation, $\\sigma$. Though this choice does not impact the resulting formula, it both simplifies the calculation and reflects the natural role of the variance as the more fundamental statistical quantity.\n",
     "\n",
     "**Step 1: Differentiate the log-likelihood function**\n",
     "$$\n",
@@ -989,7 +989,7 @@
     "n_{ij} = \\frac{1}{P(Y=y|\\Theta)} \\sum_{t=1}^{T-1} f_i(t)a_{ij}e_j(y_{t+1})b_j(t+1).\n",
     "$$\n",
     "\n",
-    "Now let's tackle the emission distributions. When the states are known, the MLEs are the same, but instead of counting transitions between states, we count emissions. (The emissions essentially take on the role of the \"target\" state $j$.) When the states are unknown, we replace these counts with how much we think each state is responsible for each emission. In other words, if at time $t$ we observe emission $i$ and we calculate an 90% chance of state 1 and a 10% chance of state 2, we assign a 0.9 count towards $n_{1i}$ and a 0.1 count towards $n_{2i}$. Written mathematically,\n",
+    "Now let's tackle the emission distributions. When the states are known, the MLEs are the same, but instead of counting transitions between states, we count emissions. (The emissions essentially take on the role of the target state $j$.) When the states are unknown, we replace these counts with how much we think each state is responsible for each emission. In other words, if at time $t$ we observe emission $i$ and we calculate an 90% chance of state 1 and a 10% chance of state 2, we assign a 0.9 count towards $n_{1i}$ and a 0.1 count towards $n_{2i}$. Written mathematically,\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -1034,7 +1034,7 @@
    "id": "4f7cc030",
    "metadata": {},
    "source": [
-    "To start the algorithm, we first need a model structure and initial estimates for its parameters. To keep the Baum-Welch approach on equal footing with the previous example, we'll assume we know the disallowed transitions but not the disallowed emissions. For the initial estimates, we'll use uniform random values to keep the code simple, but more sophisticated approaches can use specific distributions for each parameter. Though it's good practice to use the best result from several different random initializations, if the initial parameters are hard coded, the states must be different from each other in some way. If the states are all identical, there's no way for the model to \"break symmetry,\" and all the updates will yield parameters that are the same as the initial ones."
+    "To start the algorithm, we first need a model structure and initial estimates for its parameters. To keep the Baum-Welch approach on equal footing with the previous example, we'll assume we know the disallowed transitions but not the disallowed emissions. For the initial estimates, we'll use uniform random values to keep the code simple, but more sophisticated approaches can use specific distributions for each parameter. Though it's good practice to use the best result from several different random initializations, if the initial parameters are hard coded, the states must be different from each other in some way. If the states are all identical, there's no way for the model to break symmetry, and all the updates will yield parameters that are the same as the initial ones."
    ]
   },
   {
@@ -1739,7 +1739,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Again, the update equation has the same form as the corresponding MLE except each term in the sum is weighted. This is a common occurrence when using the EM algorithm and is a consequence of the construction of the objective function as a weighted sum of log-likelihood functions. Thus, when the MLEs are interpretable as quantities like counts or averages, the corresponding update equations are often \"weighted\" versions of those estimators. Of course, it's not always obvious how the weights will come into play, especially for MLEs which don't have an obvious interpretation, so it's good idea to solve the equations or look up a reference rather than guessing.\n",
+    "Again, the update equation has the same form as the corresponding MLE except each term in the sum is weighted. This is a common occurrence when using the EM algorithm and is a consequence of the construction of the objective function as a weighted sum of log-likelihood functions. Thus, when the MLEs are interpretable as quantities like counts or averages, the corresponding update equations are often weighted versions of those estimators. Of course, it's not always obvious how the weights will come into play, especially for MLEs which don't have an obvious interpretation, so it's good idea to solve the equations or look up a reference rather than guessing.\n",
     "\n",
     "## 4 Discriminative training\n",
     "\n",
